# target_detection_dashboard

./: .gitignore  README.md  Schema.xlsx  journal.md  main.py  pyproject.toml
data/: generate_sample_data.py  sample_data.csv
frontend/: index.html  index.js
tests/: conftest.py  test_api.py  test_helpers.py
