[project]
name = "fastapi-pyechart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.8",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyecharts>=2.1.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
